# sdd

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.opencode/command/: speckit.tasks.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-hello-world/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hello-world/checklists/: requirements.md
specs/001-hello-world/contracts/: command-line-interface.md
src/: hello_world.cpp
